commit after making suggested changes!

--- a/css assignment/index.html
+++ b/css assignment/index.html
@@ -17,8 +17,8 @@
   
     </nav>
 
-    <div class="container1" id="welcome">
-      <h1 class="wlcText">Welcome To My Page</h1>
+    <div class="container1">
+      <h1 class="wlcText">Welcome To My WebSite</h1>
     </div>
 
     <footer class="foot">Developed with by Deepanshu Singh @ feb 2023</footer>
